css/style.css
/* Player Details */
@font-face {
  font-family: "Aero Matics Light";
  src: url("fonts/Aero Matics Light.ttf") format("truetype");
}

/* Player Name */
@font-face {
  font-family: "Aero Matics Regular";
  src: url("fonts/Aero Matics Regular.ttf") format("truetype");
}

/* Team Name */
@font-face {
  font-family: "bombard";
  src: url("fonts/bombard.ttf") format("truetype");
}

/* Page Title */
@font-face {
  font-family: "Varsity Regular";
  src: url("fonts/varsity_regular.ttf") format("truetype");
}

header {
	margin: 0;
	padding: 1em;
	background-color: #00338D;
	background-image: repeating-linear-gradient(45deg, transparent, transparent 5px, rgba(255,255,255,.1) 5px, rgba(255,255,255,.1) 10px);
	color: #ffffff;
	border-top: solid 6px black;
	border-bottom: solid 6px black;
}

body {
	text-align: center;
	font-family: "Aero Matics Regular", arial;
	background-color: #F6F6F6;
}

.team-container {
	width: 35rem;
	margin: 0 auto;
	display: flex;
  	justify-content: center;
  	align-items: center;
}

.logo, .team-name {
	display: inline-block;
}

.logo {
	width: 35%;
}

.team-name {
	width: 60%;
	text-align: left;
}

.team {
	font-family: "bombard", arial;
	font-size: 4em;
	text-shadow: 2px 2px 1px #2E2E2E;
}

.title {
	font-family: "Varsity Regular", arial;
	font-size: 3em;
	font-weight: normal;
}

.options select {
	margin-right: 1.5em;
}

.hidden {
	display: none;
}

.playerInfo {
	margin: 1em;
	text-align: left;
	float: left;
	clear: right;
}

.results {
	width: 40%;
	margin: 0 auto;
}

.playerPic {
	padding: 0;
	width: 200px;
	height: 200px;
	background-repeat: no-repeat;
	border: solid 1px;
	margin: 1em;
	float: left;
}

.player {
	clear: both;
	margin: 2em auto;
	height: 240px;
	background-color: white;
	border: solid 1px;
	-webkit-border-radius: 15px;
	border-radius: 15px;
	-webkit-box-shadow: 0 1px 3px 0 #000000;
	box-shadow: 0 1px 3px 0 #000000;
}

.playerStats {
	margin: 1em 0;
}

@media only screen and (max-width: 500px) {

    body {
    	font-size: .75em;
    }

    .logo {
    	width: 20%;
    }

    .team-logo {
    	width: 4em;
    }

    .team-container {
    	width: 100%;
    }

    .team {
    	font-size: 2em;
    }

    .title {
    	font-size: 2.5em;
    }

    .options {
    	padding: 1em;
    }

    #submitButton {
    	margin: 1em;
    }

    .results {
    	width: 90%;
    }

    #picture, .playerPic {
     	width: 8em;
     	height: 8em;
    }

    .playerPic {
    	background-size: cover;
    }

	.player {
		height: 13em;
	} 

	.playerInfo {
		width: 11em;
	}
}

